--- a/src/app/shared/remote-config/flag-config-step/flag-config-step.component.scss
+++ b/src/app/shared/remote-config/flag-config-step/flag-config-step.component.scss
@@ -7,17 +7,15 @@ form {
 
   .form-container {
     padding: var(--space-md);
+    flex: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+
     .dynamic-fields {
       display: flex;
       flex-direction: column;
       gap: var(--space-md);
     }
-  }
-
-  // Virtual Scroll Viewport
-  .virtual-scroll-viewport {
-    width: 100%;
-    flex: 1;
   }
 
   mat-spinner {
