--- a/src/app/shared/detail-shared/vfs-control/vfs-control-panel.component.html
+++ b/src/app/shared/detail-shared/vfs-control/vfs-control-panel.component.html
@@ -375,7 +375,7 @@
                   <mat-icon
                     [svgIcon]="showAdvancedConfig() ? 'chevron-down' : 'chevron-right'"
                   ></mat-icon>
-                  <mat-icon svgIcon="settings"></mat-icon>
+                  <mat-icon svgIcon="gear"></mat-icon>
                   {{ 'shared.vfsControl.advancedConfig.title' | translate }}
                 </h3>
               </div>
