--- a/src/app/features/components/dashboard/general-detail/general-detail.component.scss
+++ b/src/app/features/components/dashboard/general-detail/general-detail.component.scss
@@ -352,7 +352,7 @@
     will-change: transform, box-shadow;
 
     &.disabled {
-      filter: grayscale(1);
+      opacity: 0.5;
     }
 
     &.stopping {
